# rust-book-tuto

./: README.md
adder/src/: lib.rs
collections/src/: main.rs  workshops.rs
enum-ip-addr/: Cargo.toml
minigrep/: output.txt
minigrep/src/: lib.rs  main.rs
rectangles/src/: main.rs
restaurant/src/: lib.rs
rust-ch-13-functional-lang/: Cargo.toml
rust-ch-13-functional-lang/src/: lib.rs  main.rs
rust-ch-14-cargo-crates-io/: Cargo.toml
rust-ch-14-cargo-crates-io/add/: Cargo.toml
rust-ch-14-cargo-crates-io/add/add_two/: Cargo.toml
rust-ch-14-cargo-crates-io/add/add_two/src/: lib.rs
rust-ch-14-cargo-crates-io/add/adder/: Cargo.toml
rust-ch-14-cargo-crates-io/add/adder/src/: main.rs
rust-ch-14-cargo-crates-io/src/: lib.rs  main.rs
rust-ch-15-smart-pointers/: Cargo.toml
rust-ch-15-smart-pointers/src/: main.rs
rust-err-handling/: Cargo.toml
rust-err-handling/src/: main.rs
rust-gen-types-traits-lifetime/: Cargo.toml
rust-gen-types-traits-lifetime/src/: lib.rs  main.rs
rust-struct/src/: main.rs
